<?xml version="1.0" encoding="utf-8"?>

    <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    tools:context=".Menu">


    <!-- Contenido principal -->
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <!-- Contenido de tu actividad principal -->


        <!-- Botón para abrir el menú lateral -->
        <ImageButton
            android:id="@+id/btnOpenDrawer"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/open_drawer"
            android:src="@drawable/ic_menu" />
        <!-- android:contentDescription="@string/open_drawer"  -->

        <!-- IMAGEN DE BIENVENIDA -->
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"

            android:layout_marginLeft="128dp"
            android:layout_marginTop="120dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ww"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- MENSAJE DE BIENVENIDA -->
        <TextView
            android:id="@+id/textViewNombreUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="¡Bienvenido!"
            android:textSize="18sp"
            android:textStyle="bold"/>


    </RelativeLayout>

    <!-- Menú lateral -->
    <LinearLayout
        android:id="@+id/drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#FFFFFF"
        android:elevation="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Agrega tus elementos del menú aquí -->

        <Button
            android:id="@+id/btnBuscarProfesor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Buscar Profesor" />

        <Button
            android:id="@+id/btnListadoDeAlumnos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Listado de alumnos" />
        <Button
            android:id="@+id/btnMisAlumnos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Mis Alumnos" />
        <Button
            android:id="@+id/btnHorarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ver Mis Horarios" />
        <Button
            android:id="@+id/btnTodosLosDatos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Datos Completos" />

        <Button
            android:id="@+id/btnCerrarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cerrar Sesión"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorBtnCerrarSesion"/>

        <!-- Botón para cerrar el menú lateral -->
        <ImageButton
            android:id="@+id/btnCloseDrawer"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/close_drawer"
            android:src="@drawable/ic_close"
            />
        <!-- android:contentDescription="@string/close_drawer"  -->
    </LinearLayout>


</androidx.drawerlayout.widget.DrawerLayout>